k8s/monitoring/02-ingressroute-grafana.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.monerometrics.net`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
